cluster/apps/networking/static-routes/minio/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: networking-local-only@kubernetescrd
    hajimari.io/enable: "true"
    hajimari.io/icon: carbon:object-storage
    hajimari.io/group: storage, database, and messaging

spec:
  tls:
    - secretName: minio-tls
      hosts:
        - "minio.${CLUSTER_DOMAIN}"

  rules:
    - host: minio.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3
  namespace: networking
  ingressClassName: traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: networking-local-only@kubernetescrd

spec:
  tls:
    - secretName: s3-tls
      hosts:
        - "s3.${CLUSTER_DOMAIN}"

  rules:
    - host: s3.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: api
